--- a/app/src/main/res/menu/menu_installer.xml
+++ b/app/src/main/res/menu/menu_installer.xml
@@ -3,17 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/dexopt_all"
-        android:title="@string/dexopt_now"
-        app:showAsAction="never" />
+        android:id="@+id/menu_optimize"
+        android:title="@string/menu_optimize"
+        app:showAsAction="never">
+        <menu>
+            <group>
+                <item
+                    android:id="@+id/dexopt_all"
+                    android:title="@string/dexopt_now"
+                    app:showAsAction="never" />
+
+                <item
+                    android:id="@+id/speed_all"
+                    android:title="@string/speed_now"
+                    app:showAsAction="never" />
+            </group>
+        </menu>
+    </item>
 
     <item
-        android:id="@+id/speed_all"
-        android:title="@string/speed_now"
-        app:showAsAction="never" />
-
-    <item
-        android:title="@string/reboot"
+        android:title="@string/menu_reboot"
         app:showAsAction="never">
         <menu>
             <item
